javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/IntVector.java
/* (c) https://github.com/MontiCore/monticore */

class IntVector {
  int[] v;
  boolean equals(IntVector other) {
    this.v = new int[1];

  }
}
